# bookmark-launcher

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
bookmarker/: Cargo.toml  bookmarks.yaml
bookmarker/src/: bookmarks.rs  cli.rs  main.rs
docs/: blog.md
src/: bookmarks.rs  lib.rs  main.rs  tui.rs
tests/: cli.rs
