[package]
name = "bookmarker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cursive = { version = "0.21", default-features = false, features = ["crossterm-backend"] }
home = "0.5.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
webbrowser = "1.0.5"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
tempfile = "3.20.0"
